Kriitilised muudatused parima skoori kuvamise huvides.